syntax = "proto3";

option go_package = "./protos";

package protos;

/// An empty message.
message Empty{
}

/// IsOnlineReq is the request message for IsOnline RPC.
message IsOnlineReq{
  map<string,string> targets = 1;
}
/// IsOnlineResp is the response message for IsOnline RPC.
message IsOnlineResp{
  bool online = 1;
}

/// MessageReq is the request message for SendToClients RPC.
message MessageReq{
  bytes message = 3;
  map<string,string> targets = 4;
}

/// MessageResp is the response message for SendMessage RPC.
message MessageResp{
 int32 total = 1;
 int32 success = 2;
}

/// KickConnReq is the request message for KickUser RPC.
message KickConnReq{
  map<string,string> targets = 1;
}
// RaftMessage represents a Raft message
message RaftMessage {
  // Raft message data in binary format
  bytes data = 1;
}
/// Progress represents the progress of raft node.
message RaftProgress {
  uint64 match = 2;
  uint64 next = 3;
  string state = 4;
}
/// Inspects is the response message for Inspect RPC.
message Status{
 uint64 id = 1;
 int32 user_count = 2;
 int32 client_count = 3;
 int32 cluster_size = 4;
 int32 channel_count = 5;
 string raft_state = 6;
 uint64 raft_term = 7;
 uint64 applied_index = 8;
 uint64 lead_ransferee = 9;
 map<uint64,RaftProgress> progress = 10;
}

// The greeting service definition.
service PeerService {
  // Inspect provides peer inspection info.
  // For example: user count, client count, cluster size, channel count.
  // It is mainly used for monitoring and debugging.
  rpc Inspect (Empty) returns (Status) {}
  // IsOnline checks if a user is online.
  rpc IsOnline (IsOnlineReq) returns (IsOnlineResp) {}
  // KickConn kicks a connection by connection ID.
  rpc KickConn (KickConnReq) returns (Empty) {}
  // SendMessage sends a message to a user or a channel.
  rpc SendToAll (MessageReq) returns (MessageResp) {}
  // SendToTargets sends a message to a channel.
  rpc SendToTargets (MessageReq) returns (MessageResp) {}
  // SendRaftMessage handles a Raft message from another node
  rpc SendRaftMessage (RaftMessage) returns (Empty) {}
}